--- a/3-flex-flow.html
+++ b/3-flex-flow.html
@@ -26,7 +26,7 @@
             flex-flow: row-reverse nowrap;
         }
         .rr-reverse{
-            flex-flow: row-reverse wrap-reverse;
+            flex-flow: column wrap-reverse;
         }
 
         .item{
