--- a/4-justify-content.html
+++ b/4-justify-content.html
@@ -17,17 +17,70 @@
             margin: 5px;
             text-align: center;
             color: white;
+            margin-bottom: 10
 
         }
+        .flex-start{
+            justify-content: flex-start;
+        }
+        .flex-end{
+            justify-content: flex-end;
+        }
+        .center{
+            justify-content: center;
+        }
+        .space-between{
+            justify-content: space-between;
+        }
+        .space-around{
+            justify-content: space-around;
+        }
+
     </style>
 </head>
 <body>
-    <section class="container">
+    <h1>flex-start</h1>
+    <section class="container flex-start">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item</div>
 
 
+    </section>
+
+    <h1>flex-end</h1>
+    <section class="container flex-end">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>
+    </section>
+
+    
+    <h1>centrer</h1>
+    <section class="container center">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+
+    <h1>space-between</h1>
+    <section class="container space-between">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+
+    <h1>space-around</h1>
+    <section class="container space-around">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
     </section>
     
 </body>
