--- a/4-justify-content.html
+++ b/4-justify-content.html
@@ -35,11 +35,16 @@
         .space-around{
             justify-content: space-around;
         }
+        .column{
+            flex-direction: column;
+            min-height: 200px;
+        }
 
     </style>
 </head>
 <body>
-    <h1>flex-start</h1>
+<h1>row</h1>
+<p>flex-start</p>
     <section class="container flex-start">
         <div class="item">1</div>
         <div class="item">item 2</div>
@@ -48,7 +53,7 @@
 
     </section>
 
-    <h1>flex-end</h1>
+<p>flex-end</p>
     <section class="container flex-end">
         <div class="item">1</div>
         <div class="item">item 2</div>
@@ -56,7 +61,7 @@
     </section>
 
     
-    <h1>centrer</h1>
+<p>center</p>
     <section class="container center">
         <div class="item">1</div>
         <div class="item">item 2</div>
@@ -65,7 +70,7 @@
         <div class="item">5</div>
     </section>
 
-    <h1>space-between</h1>
+<p>space-between</p>
     <section class="container space-between">
         <div class="item">1</div>
         <div class="item">item 2</div>
@@ -74,8 +79,27 @@
         <div class="item">5</div>
     </section>
 
-    <h1>space-around</h1>
+<p>space-around</p>
     <section class="container space-around">
+        <div class="item">1</div>
+        <div cplass="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+<h1>Column</h1>
+
+    <p>flex-start (column)</p>
+    <section class="container flex-start column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+
+<p>flex-end</p>
+    <section class="container flex-end column">
         <div class="item">1</div>
         <div class="item">item 2</div>
         <div class="item">outro item</div>   
@@ -83,5 +107,32 @@
         <div class="item">5</div>
     </section>
     
+<p>center</p>
+    <section class="container center column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+
+<p>space-betwen</p>
+    <section class="container space-between column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
+
+<p>space-around</p>
+    <section class="container space-around column">
+        <div class="item">1</div>
+        <div class="item">item 2</div>
+        <div class="item">outro item</div>   
+        <div class="item">item 4</div>
+        <div class="item">5</div>
+    </section>
 </body>
+
 </html>
