--- a/7-flex-grow.html
+++ b/7-flex-grow.html
@@ -11,6 +11,7 @@
             border: 2px solid black;
             max-width: 300px;
             margin-bottom: 20px; 
+            justify-content: center;
         }
         .item{
             background-color: orangered;
